Recuperando el index Original

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- 
+
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
@@ -10,6 +10,9 @@
     <script src="Menu\header.js" type="text/javascript"></script>
     <link rel="icon" href="Menu\Media\A-A.ico">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Kodchasan|Lobster|Nanum+Gothic|Open+Sans+Condensed:300|Slabo+27px" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+
     <title>Alumno-Alumno</title>
   </head>
   <body>
@@ -17,11 +20,10 @@
       <div class="wrapper">
       <div class="logo">Alumno-Alumno</div>
       <nav>
-
         <div class="">
         <div id="login_div">
-        <a href="Registro\Register.html" id="aregistro">Register</a>
-        <a href="Login\login.html" id="alogin">Log In</a>
+        <a href="Registro\Register.html" id="aregistro"  style="font-weight:bold">Register</a>
+        <a href="Login\login.html" id="alogin"  style="font-weight:bold">Log In</a>
         <a href="#">Contact Us</a>
       </div>
       <div id="user_div">
@@ -32,12 +34,20 @@
       </nav>
     </div>
   </header>
-    <img src="Menu\Media\NiñosBellos.png" class="FtPendejos">
+  <main>
+  <div class="content-one">
+    <div class="content-img">
+      <img src="Menu\Media\SunsetBeta.jpg" class="Sunset">
+      <center><div class="content-txt">
+          <h4> No hay mejor forma de</h4>
+          <h3>Aprender</h3>
+          <h2>Que con ayuda</h2>
+      </div> </center>
+    </div>
+  </div>
+</main>
     <section class="wrapper">
     </section>
-
-
-
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
 
