--- a/Registro/Register.html
+++ b/Registro/Register.html
@@ -23,7 +23,7 @@
     <input type="email" placeholder="Email..." class="email-field" id="email_field" required>
     <input type="password" placeholder="Contrase&ntilde;a..." class="password-field" id="password_field" required>
   <input type="password" placeholder="Repetir contrase&ntilde;a..." class="rpassword-field" id="rpassword_field" required>
-      <input type="tel" id="number_field" class="number-field"
+      <input type="number" id="number_field" class="number-field"
              placeholder="Tel:11-2345-6789"
              pattern="[0-9]{2}-[0-9]{2}-[0-9]{4}-[0-9]{4}"
              required />
