--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <script src="Menu\header.js" type="text/javascript"></script>
     <link rel="icon" href="Menu\Media\A-A.ico">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Kodchasan|Lobster|Nanum+Gothic|Open+Sans+Condensed:300|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+<link rel="stylesheet" href="hovermaster/css/hover-min.css">
 
-    <title>Alumno-Alumno</title>
+    <title>jorge</title>
   </head>
   <body>
     <header>
@@ -27,24 +32,33 @@
         <a href="#">Contact Us</a>
       </div>
       <div id="user_div">
-        <a onclick="logout()" href="#"id="alogout">Log Out</a>
+        <a onclick="logout()" href="#"id="alogout"  style="font-weight:bold">Log Out</a>
         <a href="#">Contact Us</a>
       </div>
     </div>
       </nav>
     </div>
   </header>
+  
   <main>
   <div class="content-one">
     <div class="content-img">
-      <img src="Menu\Media\SunsetBeta.jpg" class="Sunset">
-      <center><div class="content-txt">
-          <h4> No hay mejor forma de</h4>
-          <h3>Aprender</h3>
-          <h2>Que con ayuda</h2>
-      </div> </center>
+      <button class="btnmaterias hvr-glow hvr-float-shadow" style="float:right;">Materias</button>
+      <div class="bgtxt">
+        <div class="content-txt">
+          <h3 class="nohay">No hay mejor forma de</h3>
+          <h3 class="aprender">aprender</h3>
+          <h3 class="quecon">que con ayuda.</h3>
+      </div>
+    </div>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
 </main>
     <section class="wrapper">
     </section>
