--- a/Materias/Matematica/index.html
+++ b/Materias/Matematica/index.html
@@ -2,6 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="" href="estilos.css">
     <title></title>
   </head>
   <body>
@@ -9,7 +10,7 @@
     <input type="text" id="desc">
     <button type="button" onclick="writeUserinSubject()" name="button"> Publicar Perfil Profesor</button>
     <button type="button" onclick="Traer()" name="button"> Chau</button>
-    <ul id="posts"></ul>
+    <ul id= "posts"></ul>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
 
