--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 <link rel="stylesheet" href="hovermaster/css/hover-min.css">
 
     <title>jorge</title>
@@ -39,10 +40,20 @@
       </nav>
     </div>
   </header>
-  
   <main>
   <div class="content-one">
     <div class="content-img">
+      <form action="action_page.php" style="border:1px solid #ccc">
+  <div class="loginn">
+    <h1>Ingrese sus Datos.</h1>
+    <input type="text" placeholder="Email..." name="email" required class="login1">
+    <input type="password" placeholder="Password..." name="psw" required class="pass1">
+    <div class="clearfix">
+      <button type="button" class="cancelbtn hvr-glow hvr-float-shadow">Cancel</button>
+      <button type="submit" class="signupbtn hvr-glow hvr-float-shadow">Sign Up</button>
+    </div>
+  </div>
+</form>
       <button class="btnmaterias hvr-glow hvr-float-shadow" style="float:right;">Materias</button>
       <div class="bgtxt">
         <div class="content-txt">
@@ -53,12 +64,6 @@
     </div>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
 </main>
     <section class="wrapper">
     </section>
