--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
   <main>
   <div class="content-one">
     <div class="content-img">
-      <form action="action_page.php" style="border:1px solid #ccc">
+      <form action="action_page.php" style="border:0px solid #ccc">
   <div class="loginn">
-    <h1>Ingrese sus Datos.</h1>
+    <p class="isd">Ingrese sus Datos.</p>
     <input type="text" placeholder="Email..." name="email" required class="login1">
     <input type="password" placeholder="Password..." name="psw" required class="pass1">
     <div class="clearfix">
-      <button type="button" class="cancelbtn hvr-glow hvr-float-shadow">Cancel</button>
-      <button type="submit" class="signupbtn hvr-glow hvr-float-shadow">Sign Up</button>
+      <button type="button" class="cancelbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Cancel</p></button>
+      <button type="submit" class="signupbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Sign Up</p></button>
     </div>
+    <a href="#" class="redirect">¿No tienes una cuenta? Crea una aqui</a>
   </div>
 </form>
       <button class="btnmaterias hvr-glow hvr-float-shadow" style="float:right;">Materias</button>
