--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Alumno-Alumno</title>
     <link rel="stylesheet" href="Menu\estilos.css">
+    <link rel="stylesheet" href="Menu\ParticularTest\Menu\estilos-index.css">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="Menu\header.js" type="text/javascript"></script>
     <link rel="icon" href="Menu\Media\A-A.ico">
@@ -36,13 +37,13 @@
   </header>
   <main>
   <div class="content-one">
-    <div class="content-img">
-      <img src="Menu\Media\SunsetBeta.jpg" class="Sunset">
-      <center><div class="content-txt">
+      <div class="content-txt">
           <h4> No hay mejor forma de</h4>
-          <h3>Aprender</h3>
+          <center><h3>Aprender</h3></center>
           <h2>Que con ayuda</h2>
-      </div> </center>
+      </div>
+      <div class="content-img">
+      <img src="Menu\Media\Students.jpg" height="450px;" width="100%" >
     </div>
   </div>
 </main>
