index CASI terminado

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
   <main>
   <div class="content-one">
     <div class="content-img">
+      <div class="btnsubject">
+        <button class="btnmaterias hvr-glow hvr-float-shadow" style="float:right;">Materias</button>
+      </div>
+      <div class="content-txt">
+        <h3 class="nohay">No hay mejor forma de</h3>
+        <h3 class="aprender">aprender</h3>
+        <h3 class="quecon">que con ayuda.</h3>
+      </div>
       <form action="action_page.php" style="border:0px solid #ccc">
   <div class="loginn">
     <p class="isd">Ingrese sus Datos.</p>
@@ -55,14 +63,45 @@
     <a href="#" class="redirect">¿No tienes una cuenta? Crea una aqui</a>
   </div>
 </form>
-      <button class="btnmaterias hvr-glow hvr-float-shadow" style="float:right;">Materias</button>
-      <div class="bgtxt">
-        <div class="content-txt">
-          <h3 class="nohay">No hay mejor forma de</h3>
-          <h3 class="aprender">aprender</h3>
-          <h3 class="quecon">que con ayuda.</h3>
-      </div>
     </div>
+  </div>
+  <div class="content-two">
+    <div class="content-details">
+      <div class="content-item2">
+  <label class="icon-Libro"></label>
+  <br>
+  <img src="Menu\Media\Libro.ico" height="40px;" width="40px;">
+          <h4>Aprender</h4>
+          <p>Con la aplicación Alumno-Alumno, te permitimos aprender diferentes materias para que puedas profundizar
+             con tus estudios, Una vez te registres, se te dará la opcion de aprender o enseñar sobre las tematicas que más te gusten.
+             Luego de ello, es necesario que acuerdes con un alumno o con un profesor para tener tu propia clase particular y listo!
+              Solo te queda aprender!​</p>
+      </div>
+      <div class="content-item2">
+  <label class="icon-plata"></label>
+  <br>
+  <img src="Menu\Media\Money.png" height="40px;" width="40px;">
+          <h4>Costos</h4>
+          <p>Alumno-Alumno provee todas las clases particulares de manera completamente gratuita!
+  De esta forma, se busca una accesibilidad total hacia cada usuario que precise de ayuda academica.
+  No perdés nada por intentarlo!​</p>
+      </div>
+      <div class="content-item2">
+  <label class="icon-Comunidad"></label>
+  <br>
+  <img src="Menu\Media\Comunidad.ico" height="40px;" width="40px;">
+          <h4>Comunidad</h4>
+          <p>En la comunidad de Alumno-Alumno, intentamos progresar en el sistema educativo otorgando la ayuda particular
+  que cada uno precise. De esta forma, unimos al alumno o profesor que quiera enseñar con el que quiera aprender, para así,
+  ayudar a cada persona que requiera una ayuda a la hora de estudiar.​</p>
+</div>
+</div>
+  <div class="content-three">
+    <div class="content-module">
+      <h3>En Funcionamiento</h3>
+      <img src="Menu\Media\Skull.jpg" width=" 240px;" height="400px;" class="skel hvr-glow">
+       <img src="Menu\Media\Lion.jpg" width="240px;" height="400px;" class="lion hvr-glow hvr-grow-shadow">
+      <img src="Menu\Media\Ace.png"width="240px;" height="400px;" class="cards hvr-glow">
     </div>
   </div>
 </main>
