--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <input type="password" placeholder="Password..." name="psw" required class="pass1">
     <div class="clearfix">
       <button type="button" class="cancelbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Cancel</p></button>
-      <button type="submit" class="signupbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Sign Up</p></button>
+      <button type="submit" class="signupbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Sign In</p></button>
     </div>
     <a href="#" class="redirect">¿No tienes una cuenta? Crea una aqui</a>
   </div>
@@ -73,7 +73,7 @@
   <img src="Menu\Media\Libro.ico" height="40px;" width="40px;">
           <h4>Aprender</h4>
           <p>Con la aplicación Alumno-Alumno, te permitimos aprender diferentes materias para que puedas profundizar
-             con tus estudios, Una vez te registres, se te dará la opcion de aprender o enseñar sobre las tematicas que más te gusten.
+             en tus estudios. Una vez te registres, se te dará la opcion de aprender o enseñar sobre las tematicas que más te gusten.
              Luego de ello, es necesario que acuerdes con un alumno o con un profesor para tener tu propia clase particular y listo!
               Solo te queda aprender!​</p>
       </div>
@@ -98,7 +98,7 @@
 </div>
   <div class="content-three">
     <div class="content-module">
-      <h3>En Funcionamiento</h3>
+      <u><h3 style="font-style: bold">En Funcionamiento</h3></u>
       <img src="Menu\Media\Skull.jpg" width=" 240px;" height="400px;" class="skel hvr-glow">
        <img src="Menu\Media\Lion.jpg" width="240px;" height="400px;" class="lion hvr-glow hvr-grow-shadow">
       <img src="Menu\Media\Ace.png"width="240px;" height="400px;" class="cards hvr-glow">
