--- a/Login/login.html
+++ b/Login/login.html
@@ -7,20 +7,20 @@
 </head>
 <body>
 
-  <div id="login_div" class="login-div">
+  <div id="login_div" class="login-div hvr-glow">
     <h3 class="datos">Ingrese sus datos aqui</h3>
     <input type="email" placeholder="Email..." class="email-field" id="email_field">
     <input type="password" placeholder="Contrase&ntilde;a..." class="password-field" id="password_field">
     <button class="hvr-glow hvr-float-shadow" onclick="login()">Ingresar</button>
     <br>
-    <a href="..\Registro\Register.html" >¿No tienes una cuenta? crea una aqui</a>
+    <a href="..\Registro\Register.html" class="redirect">¿No tienes una cuenta? crea una aqui</a>
   </div>
 
   <div id="user_div" class="loggedin-div">
     <h3>Welcome User</h3>
     <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
     <button onclick="logout()">Logout</button>
-  </div> 
+  </div>
 
 
 
