--- a/Registro/Register.html
+++ b/Registro/Register.html
@@ -11,7 +11,7 @@
 
   </header>
 
-  <div id="login_div" class="login-div">
+  <div id="login_div" class="login-div hvr-glow">
     <h3 class="datos">Ingrese sus datos aqui</h3>
     <table>
       <tr>
