--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav>
         <div class="">
         <div id="login_div">
-        <a href="Registro\Register.html" id="aregistro"  style="font-weight:bold">Register</a>
+        <a href="Registro\Register.html" style="font-weight:bold">Register</a>
         <a href="Login\login.html" id="alogin"  style="font-weight:bold">Log In</a>
         <a href="#">Contact Us</a>
       </div>
@@ -44,25 +44,13 @@
   <div class="content-one">
     <div class="content-img">
       <div class="btnsubject">
-        <button class="btnmaterias hvr-glow hvr-float-shadow" style="float:right;">Materias</button>
+        <button class="btnmaterias hvr-glow hvr-float-shadow"  onclick=""style="float:right;">Materias</button>
       </div>
       <div class="content-txt">
         <h3 class="nohay">No hay mejor forma de</h3>
         <h3 class="aprender">aprender</h3>
         <h3 class="quecon">que con ayuda.</h3>
       </div>
-      <form action="action_page.php" style="border:0px solid #ccc">
-  <div class="loginn">
-    <p class="isd">Ingrese sus Datos.</p>
-    <input type="text" placeholder="Email..." name="email" required class="login1">
-    <input type="password" placeholder="Password..." name="psw" required class="pass1">
-    <div class="clearfix">
-      <button type="button" class="cancelbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Cancel</p></button>
-      <button type="submit" class="signupbtn hvr-glow hvr-float-shadow"><p style="margin-top: -8px;">Sign In</p></button>
-    </div>
-    <a href="#" class="redirect">¿No tienes una cuenta? Crea una aqui</a>
-  </div>
-</form>
     </div>
   </div>
   <div class="content-two">
