--- a/Materias/Matematica/index.html
+++ b/Materias/Matematica/index.html
@@ -10,7 +10,8 @@
     <input type="text" id="desc">
     <button type="button" onclick="writeUserinSubject()" name="button"> Publicar Perfil Profesor</button>
     <button type="button" onclick="Traer()" name="button"> Chau</button>
-    <ul id= "posts"></ul>
+    <div id="posts"></div>
+    <ul id= "postt"></ul>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
 
