--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 <link rel="stylesheet" href="hovermaster/css/hover-min.css">
 
-    <title>jorge</title>
+    <title>Alumno-Alumno</title>
   </head>
   <body>
     <header>
@@ -44,7 +44,7 @@
   <div class="content-one">
     <div class="content-img">
       <div class="btnsubject">
-        <button class="btnmaterias hvr-glow hvr-float-shadow"  onclick=""style="float:right;">Materias</button>
+        <button class="btnmaterias hvr-glow hvr-float-shadow" href="" ronclick=""style="float:right;">Materias</button>
       </div>
       <div class="content-txt">
         <h3 class="nohay">No hay mejor forma de</h3>
