--- a/Materias/Matematica/index.html
+++ b/Materias/Matematica/index.html
@@ -24,11 +24,9 @@
       </nav>
     </div>
   </header>
-  <div class="cajapublicar" style="display:none;">
-    <input type="text" id="desc" placeholder="Carga tu materia" class="textbox hvr-float-shadow hvr-glow" >
-    <button type="button" onclick="writeUserinSubject()" name="button"  class="btnpublish hvr-glow hvr-float-shadow"> Publicar</button>
+    <div id="posts" class="posts">
+
     </div>
-    <div id="posts"></div>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
 
