--- a/Materias/Matematica/index.html
+++ b/Materias/Matematica/index.html
@@ -25,7 +25,6 @@
     </div>
   </header>
     <div id="posts" class="posts">
-
     </div>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
@@ -41,5 +40,7 @@
       firebase.initializeApp(config);
     </script>
     <script src="index.js"></script>
+    <script src="../redirect.js"></script>
+
   </body>
 </html>
