--- a/Materias/Matematica/index.html
+++ b/Materias/Matematica/index.html
@@ -24,9 +24,12 @@
       </nav>
     </div>
   </header>
+  <div class="bground">
+
     <div id="posts" class="posts">
 
     </div>
+  </div>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
 
