--- a/Materias/Matematica/index.html
+++ b/Materias/Matematica/index.html
@@ -31,17 +31,16 @@
     <div id="posts" class="posts">
 
     </div>
-<<<<<<< HEAD
 
 
 
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal"  style="display:none;"class="modal">
 
-  <!-- Modal content -->
   <div class="modal-content w3-animate-top">
     <div class="cabeza">
+      <!-- Modal content -->
       <h4>Subir perfil  <span class="close">&times;</span> </h4>
       <label>nombre:</label>
       <textarea class="desc" rows="2" ></textarea>
@@ -51,11 +50,7 @@
 
 </div>
 
-
-
-=======
   </div>
->>>>>>> 041f7024fbad8b6f1f0ede5c857acaebb49f5a8f
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
 
